# SPDX-FileCopyrightText: 2022 Agathe Porte <microjoe@microjoe.org>
#
# SPDX-License-Identifier: Apache-2.0 OR MIT

[package]
name = "gtk_liststore_item"
version = "1.1.2"
authors = ["Agathe Porte <microjoe@microjoe.org>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Automatic gtk::ListStore struct derive for Rust."
readme = "README.md"
keywords = ["gui", "gtk", "gtk-rs", "gnome", "glade"]
categories = ["gui"]
repository = "https://github.com/MicroJoe/gtk_liststore_item"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.14"
glib = "0.14"
gtk_liststore_item_derive = { version = "1.1", optional = true, path = "../gtk_liststore_item_derive" }

[dev-dependencies]
gladis = "1"
gtk_liststore_item_derive = { version = "1.1", path = "../gtk_liststore_item_derive" }
gio = "0.14"
rand = "0.8"

# Relm example
relm = "0.22"
relm-derive = "0.22"

[features]
default = ["derive"]
derive = ["gtk_liststore_item_derive"]
