[package]
name = "gtk_liststore_item_derive"
version = "0.1.0"
authors = ["Romain Porte <microjoe@microjoe.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
gtk_liststore_item = { path = "../gtk_liststore_item" }